--- a/case_quant.ipynb
+++ b/case_quant.ipynb
@@ -743,13 +743,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### **DPO(Detrended Price Oscillator)**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -757,6 +750,32 @@
    },
    "source": [
     "### **Indicadores de momentum**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Indicadores de momentum\n",
+    "\n",
+    "\n",
+    " Indicadores de momentum buscam identificar a **velocidade ou força de uma tendência**.\n",
+    "\n",
+    " O termo \"momentum\" refere-se à quantidade de movimento ou força de um ativo durante um determinado período de tempo.\n",
+    "\n",
+    " Ele é baseado na ideia de que **movimentos de tendência de preços podem ganhar ou perder força**, o que pode ser um indicativo da continuação ou reversão deles.\n",
+    "\n",
+    " Um **alto momentum** indica uma rápida mudança de preço, enquanto um **baixo momentum** sugere que o preço está mudando lentamente.\n",
+    "\n",
+    "**Inércia dos Preços:** assim como a inércia em física, o conceito de momentum sugere que uma vez que um ativo começa a se mover em uma direção, é provável que continue a se mover nessa direção, a menos que uma força externa (como notícias ou eventos macroeconômicos) cause uma mudança.\n",
+    "\n",
+    "Evidentemente, o cálculo de indicadores de momentum não é extremamente preciso, entretanto, ao ser combinado com outros indicadores, seja para a análise técnica propriamente dita ou para alimentar modelos de ML(Machile Learning), pode ser bastante útil e relevante.\n",
+    "\n",
+    " Exemplos de indicadores de momentum:\n",
+    "\n",
+    "  - RSI (Relative Strength Index)\n",
+    "  - MACD (Moving Average Convergence Divergence)\n",
+    "  - Oscilador Estocástico"
    ]
   },
   {
@@ -771,11 +790,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "<br>\n",
+    "<center>\n",
+    "  <img src=\"https://commodity.com/wp-content/uploads/technical-analysis/RSIEBAYbuysell.gif\" width=\"550px\">\n",
+    "\n",
+    "  <strong>Fonte:</strong>\n",
+    "  `https://commodity.com/technical-analysis/relative-strength-index/`\n",
+    "</center>\n",
+    "<br>\n"
+   ]
   },
   {
    "cell_type": "markdown",
