--- a/case_quant.ipynb
+++ b/case_quant.ipynb
@@ -774,7 +774,6 @@
     " Exemplos de indicadores de momentum:\n",
     "\n",
     "  - RSI (Relative Strength Index)\n",
-    "  - MACD (Moving Average Convergence Divergence)\n",
     "  - Oscilador Estocástico"
    ]
   },
@@ -803,6 +802,104 @@
     "</center>\n",
     "<br>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O RSI, ou Índice de Força Relativa, é um indicador de momentum criado por Welles Wilder que mede a velocidade e a mudança dos movimentos de preço. Ele varia de 0 a 100 e é amplamente utilizado para identificar condições de sobrecompra e sobrevenda de um ativo, sinalizando possíveis pontos de reversão.\n",
+    "\n",
+    "##### Conceitos e Cálculo\n",
+    "\n",
+    "- **Objetivo:**  \n",
+    "  O RSI busca quantificar a força de uma tendência comparando a magnitude dos ganhos e das perdas em um determinado período, normalmente 14 períodos.\n",
+    "\n",
+    "- **Etapas do Cálculo:**\n",
+    "\n",
+    "  1. **Determinação das variações diárias:**  \n",
+    "     Para cada período, calcula-se a variação do preço:\n",
+    "     - Se a variação for positiva, ela é considerada ganho.\n",
+    "     - Se a variação for negativa, ela é considerada perda (usando o valor absoluto).\n",
+    "\n",
+    "  2. **Cálculo das médias de ganhos e perdas:**  \n",
+    "     - **Média dos Ganhos (MG):** Média das variações positivas ao longo do período escolhido.  \n",
+    "     - **Média das Perdas (MP):** Média das variações negativas (como valores absolutos) ao longo do mesmo período.\n",
+    "\n",
+    "  3. **Cálculo da Razão de Força (RS):**  \n",
+    "     $$ RS = \\frac{\\text{Média dos Ganhos (MG)}}{\\text{Média das Perdas (MP)}} $$\n",
+    "\n",
+    "  4. **Cálculo do RSI:**  \n",
+    "     A partir do RS, o RSI é calculado pela fórmula:\n",
+    "     $$ RSI = 100 - \\frac{100}{1 + RS} $$\n",
+    "\n",
+    "##### Interpretação\n",
+    "\n",
+    "- **Condições de Sobrecompra e Survenda:**  \n",
+    "  - **RSI > 70:** Geralmente indica que o ativo pode estar sobrecomprado, sugerindo a possibilidade de uma correção ou reversão de tendência.  \n",
+    "  - **RSI < 30:** Sugere que o ativo pode estar sobrevendido, o que pode ser um sinal de uma recuperação iminente.\n",
+    "\n",
+    "- **Divergências:**  \n",
+    "  Quando o preço forma topos ou fundos que não são confirmados pelo RSI, isso pode indicar uma divergência. Tais divergências podem sinalizar que a tendência atual está perdendo força e uma reversão pode ocorrer.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import yfinance as yf\n",
+    "import talib\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Definir o ticker de uma ação brasileira (ex: PETR4 - Petrobras)\n",
+    "ticker = 'PETR4.SA'\n",
+    "# Baixar dados históricos do último ano\n",
+    "data = yf.download(ticker, period='1y')\n",
+    "\n",
+    "# Remover possíveis valores nulos\n",
+    "data = data.dropna()\n",
+    "\n",
+    "# Utilizando TA-lib para calcular o RSI com período de 14 dias\n",
+    "data['RSI'] = talib.RSI(data['Close'], timeperiod=14)\n",
+    "\n",
+    "# Plotando o gráfico do preço de fechamento e do RSI\n",
+    "plt.figure(figsize=(14,8))\n",
+    "\n",
+    "# Gráfico 1: Preço de Fechamento\n",
+    "plt.subplot(2,1,1)\n",
+    "plt.plot(data.index, data['Close'], label='Preço de Fechamento', color='blue')\n",
+    "plt.title(f\"{ticker} - Preço e Indicador RSI\")\n",
+    "plt.ylabel(\"Preço (BRL)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# Gráfico 2: RSI\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.plot(data.index, data['RSI'], label='RSI', color='magenta')\n",
+    "plt.axhline(70, color='grey', linestyle='--', label='Sobrecompra (70)')\n",
+    "plt.axhline(30, color='grey', linestyle='--', label='Survenda (30)')\n",
+    "plt.title(\"Relative Strength Index (RSI)\")\n",
+    "plt.xlabel(\"Data\")\n",
+    "plt.ylabel(\"RSI\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
